# RucioTransferManager

./: .envrc  README.md  batch.sh  packages.txt  pyproject.toml  sub.txt
.cspell/: custom-dictionary-workspace.txt
data/: Data2016.yaml  MiniAODSIM_2016.yaml  NanoAODSIM_2016.yaml  Test2016.yaml  exclude.txt  miniaodsim_2016.txt  nanoaodsim_2016.txt
src/rtm/: cli.py  config.py  manager.py  model.py  rtm.toml  utils.py
